Fix spacing issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2520,7 +2520,7 @@ input, select, textarea {
 
 .grid figure {
   margin: 0.1em;
-  width: 340px;
+  width: 240px;
   height: 240px;
   background: #3085a3;
   display: inline-block;
